# TileRT

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
tilert/: __init__.py  generate.py  tilert_init.py  utils.py
tilert/benchmark/: __init__.py  coding_prompt.py  config.py  long_prompt.py  short_prompt.py
tilert/models/: __init__.py  base.py  common.py  deepseek_config.py  utils.py
tilert/models/deepseek_v3_2/: __init__.py  generator.py  model_args.py  temp_var_indices.py
tilert/models/deepseek_v3_2/modules/: __init__.py  dsa.py  end2end.py  mla_v2.py  mlp.py  moe.py  mtp.py  mtp_preprocess.py
tilert/models/deepseek_v3_2/ops/: __init__.py  down_allreduce.py  eh_proj_allreduce.py  expert_down_allreduce.py  expert_sel_up_gate_silu.py  flash_sparse_mla.py  layernorm_rope_rotate.py  padded_allreduce_add.py  projo_wkvb.py  projq_wqb.py  projx_wis.py  projx_wqaki.py  projx_wqkva.py  qkv_rope.py  rmsnorm_expert_proj.py  rmsnorm_head_proj.py  rmsnorm_kv.py  rmsnorm_projq_wqb.py  rmsnorm_projq_wqi.py  rmsnorm_projx_wqakis.py  rmsnorm_projx_wqkva.py  rmsnorm_up_gate_silu.py  rotate.py  sparse_index.py  topk.py  unproj_o_allreduce.py
tilert/models/deepseek_v3_2/refs/: __init__.py  kernel.py
tilert/models/glm_5/: __init__.py  generator.py  model_args.py  params.py  temp_var_indices.py
tilert/models/glm_5/_dsa_v32/: generator.py  model_args.py  temp_var_indices.py
tilert/models/glm_5/_dsa_v32/modules/: dsa.py  end2end.py  mla_v2.py  mlp.py  moe.py  mtp.py  mtp_preprocess.py
tilert/models/glm_5/_dsa_v32/ops/: __init__.py  broadcast_selected_token_ids.py  down_allreduce.py  eh_proj_allreduce.py  expert_down_allreduce.py  expert_sel_up_gate_silu.py  flash_sparse_mla.py  head_proj_w16a16_hmma.py  layernorm_rope_rotate.py  padded_allreduce_add.py  projo_wkvb.py  projq_wqb.py  projx_wis.py  projx_wqaki.py  projx_wqkva.py  qkv_rope.py  receive_selected_token_ids.py  rmsnorm_expert_proj.py  rmsnorm_head_proj.py  rmsnorm_kv.py  rmsnorm_projq_wqb.py  rmsnorm_projq_wqi.py  rmsnorm_projx_wqakis.py  rmsnorm_projx_wqkva.py  rmsnorm_quant.py  rmsnorm_up_gate_silu.py  rotate.py  sparse_index.py  topk.py  unproj_o_allreduce.py
tilert/models/glm_5/modules/: dsa.py  end2end.py  mla_v2.py  mlp.py  moe.py  mtp.py  mtp_preprocess.py
tilert/models/glm_5/ops/: __init__.py  sparse_index_v3.py
tilert/models/preprocess/: weight_converter.py
tilert/pd_vllm/: __init__.py  decode_server.py  engine_iface.py  oai_parser.py  pd_router.py  prefill_connector.py  receive_server.py  transport.py  wire.py
tilert/pd_vllm/profiles/: __init__.py  base.py  dsv32.py  glm5.py  mla_nsa.py
